reindenting recipe show html

--- a/app/assets/stylesheets/recipes/_recipe_add_details.scss
+++ b/app/assets/stylesheets/recipes/_recipe_add_details.scss
@@ -1,7 +1,10 @@
-#recipe_add_details{
+#recipe-add-details{
   .details {
     display: flex;
     justify-content: space-between;
+  }
+  p {
+    font-size: 35px;
   }
   .recipe-steps {
 
