--- a/app/views/recipes/add_details.html.erb
+++ b/app/views/recipes/add_details.html.erb
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="//unpkg.com/iview/dist/styles/iview.css">
 
-<div class="container" id="recipe_add_details" v-cloak>
+<div class="container" id="recipe-add-details" v-cloak>
   <div class="recipe-info">
     <div v-if="!editBasics" style="display: flex; justify-content: flex-start; align-items: center; height: 50px;">
       <a v-on:click="editBasics = true">
