--- a/app/views/recipes/add_details.html.erb
+++ b/app/views/recipes/add_details.html.erb
@@ -2,7 +2,7 @@
 
 <div class="container" id="recipe-add-details" v-cloak>
   <div class="recipe-info">
-    <div v-if="!editBasics" style="display: flex; justify-content: flex-start; align-items: center; height: 50px;">
+    <div v-if="!editBasics" class="item-center-flex-start" style="height: 50px;">
       <a v-on:click="editBasics = true">
         <i class="fa fa-pencil-square-o" style="font-size: 20px; margin-right: 10px;" aria-hidden="true"></i>
       </a>
