--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -53,7 +53,7 @@
       <ul>
         <% @steps.each do |step| %>
           <li>
-            <h5>:::::: <%=step.index %></h5>
+            <h5>:::::: <%=step.order %></h5>
             <p><%= step.text %></p>
           </li>
         <% end %>
