recipeshow mobile first

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -93,7 +93,7 @@
 /* Basic navbar item */
 .navbar-item {
   cursor: pointer;
-  padding: 0 20px;
+  padding: 0px 20px 0px 0px;
 }
 
 /* Navbar link */
