--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,69 +1,77 @@
 <div class="container" id="recipe-show">
-  <div class="entete">
-    <div class="recipe-title">
+
+  <div class="row entete">
+    <div class="col-xs-12 recipe-title">
       <h2><%= @recipe.title %></h2>
-        <% if current_user.admin? %>
-          <%= link_to add_details_path(@recipe) do %>
-            <i class="fa fa-plus" aria-hidden="true"></i>
-          <% end %>
+      <% if current_user.admin? %>
+        <%= link_to add_details_path(@recipe) do %>
+          <i class="fa fa-plus" aria-hidden="true"></i>
         <% end %>
+      <% end %>
     </div>
-    <div class="servingsandtime">
+  </div>
+
+  <div class="col-xs-12 line"></div>
+
+  <div class="row">
+    <div class="col-xs-12 servingsandtime">
       <p><strong>Couverts: </strong><%= @recipe.servings %> pers.</p>
       <p><strong>Préparation: </strong><%= @recipe.preparation_time %> minutes</p>
       <p><strong>Cuisson: </strong><%= @recipe.cooking_time %> minutes</p>
     </div>
   </div>
-  <div class="recipe-topnotes">
-    <div class="recipe-description">
-      <p>Use this bright green, earthy mix as a dip for crudités or a dressing for heartier salad greens like radicchio, spinach, arugula, thinly sliced fennel, or a combination. It’s also terrific as a dressing, drizzled on a simple roasted or grilled chicken, meats or fish. Use this bright green, earthy mix as a dip for crudités or a dressing for heartier salad greens like radicchio, spinach, arugula, thinly sliced fennel, or a combination. It’s also terrific as a dressing, drizzled on a simple roasted or grilled chicken, meats or fish. t’s also terrific as a dressing, drizzled on a simple roasted or grilled chicken, meats or fish. Use this bright green, earthy mix as a dip for crudités or a dressing for heartier salad greens like radicchio, spinach, arugula, thinly sliced fennel, or a combination. It’s also terrific as a dressing, drizzled on a simple roasted or grilled chicken, meats or fish</p>
-    </div>
-    <div class="recipe-image">
+  <div class="row" >
+   <div class="col-sm-8 col-xs-12 recipe-image">
       <% if @recipe.photos? %>
       <%= cl_image_tag @recipe.photos[0].path %>
       <% end %>
     </div>
+
+
+
+  <div class="col-sm-4 col-xs-12 recipe-topnotes">
+    <div class="recipe-description">
+      <p>Use this bright green, earthy mix as a dip for crudités or a dressing for heartier salad greens like radicchio, spinach, arugula, thinly sliced fennel, or a combination. It’s also terrific as a dressing, drizzled on a simple roasted or grilled chicken, meats or fish. Use this bright green, earthy mix as a dip for crudités or a dressing for heartier salad greens like radicchio, spinach, arugula, thinly sliced fennel, or a combination.</p>
+    </div>
   </div>
-  <div class="recipe-info">
-    <div class="recipe-mesures">
-      <h3>Ingrédients</h3>
-      <ul>
-        <% @measures.each do |measure| %>
-          <li>
-            <p><%= measure.quantity %><%= measure.text_1 %><%= measure.ingredient.name %><%= measure.text_2 %></p>
-          </li>
-        <% end %>
-      </ul>
-      <a target="_blank" href="" class="email-ingredients-button">
-        Liste des courses
-      </a>
-      <div class="recipe-ustensiles">
-        <h3>Ustensiles</h3>
+  </div>
+
+  <div class="row">
+    <div class="col-sm-4 col-xs-12 recipe-info">
+      <div class="recipe-mesures">
+        <h3>Ingrédients</h3>
         <ul>
-          <% @tools.each do |tool| %>
+          <% @measures.each do |measure| %>
             <li>
-              <p><%= tool.name %></p>
+              <p><%= measure.ingredient.name %><%= measure.text_2 %></p>
+              <p><strong><%= measure.quantity %><%= measure.text_1 %></strong></p>
             </li>
           <% end %>
         </ul>
+        <!-- <a target="_blank" href="" class="email-ingredients-button">
+          Liste des courses
+        </a> -->
       </div>
     </div>
-    <div class="recipe-etapes">
+
+    <div class="col-sm-8 col-xs-12 recipe-etapes">
       <h3>Etapes</h3>
       <ul>
         <% @steps.each do |step| %>
           <li>
-            <h5>:::::: <%=step.order %></h5>
+            <h5><%=step.order %></h5>
             <p><%= step.text %></p>
           </li>
         <% end %>
       </ul>
-      <div id="module-recipe-cooked">
+      <!-- <div id="module-recipe-cooked">
         <button class="recipe-cooked-button">
         </button>
-      </div>
+      </div> -->
     </div>
   </div>
+
+
 </div>
 
 
