--- a/app/assets/stylesheets/recipes/_recipe_show.scss
+++ b/app/assets/stylesheets/recipes/_recipe_show.scss
@@ -3,72 +3,106 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    border-bottom: 1px solid grey;
   }
 
   .servingsandtime{
-    margin-top: 4%;
-    p{
-      font-size: 14px;
-    }
+
   }
 
   .recipe-topnotes{
-    display:flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    margin-top: 5%;
+    // display:flex;
+    // justify-content: space-between;
+    // align-items: flex-start;
+    // margin-top: 5%;
+
+  }
+
+  .line{
     border-bottom: 1px solid black;
-    padding-bottom: 40px;
+    margin-bottom: 15px;
+    // padding-bottom: 40px;
   }
 
   .recipe-image{
-    flex: 0 0 60%;
+    // flex: 0 0 60%;
     img{
       width: 100%;
+      margin-bottom: 15px;
     }
   }
 
   .recipe-description{
-    flex: 1 0 40%;
-    padding-right: 8%;
+    // flex: 1 0 40%;
+    margin-bottom: 20px;
   }
 
+
+  p{
+      font-size: 14px;
+      color: grey;
+    strong{
+      color: black;
+    }
+    }
+
   .recipe-info{
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
+    // display: flex;
+    // justify-content: space-between;
+    // align-items: flex-start;
   }
 
   .recipe-mesures{
-    flex: 0 0 30%;
-    li {
+    // flex: 0 0 30%;
+    padding: 0px;
+    ul{
+      padding-left: 0px;
+      li {
+      display: flex;
+      justify-content: space-between;
       list-style: none;
-      font-weight: bold;
-      p {
-      font-size: 14px;
+      padding-left: 0px;
       }
     }
   }
 
+  h3 {
+      margin-top: 0px;
+      font-size: 25px;
+    }
+
   .recipe-etapes{
+    margin-bottom: 40px;
+
+    ul{
+      padding: 0px;
+    }
     li {
       list-style: none;
+      p{
+      margin-bottom: 10px;
+    }
     }
     h5 {
       font-weight: bold;
-      font-size: 1.5 em;
+      font-size: 20px;
+      color: rgb(45, 140, 240)
     }
   }
 
   .recipe-ustensiles{
-    li {
+    padding: 0px;
+    ul{
+      padding-left: 0px;
+      li {
       list-style: none;
-      p {
-      font-size: 14px;
+      padding-left: 0px;
+      // p {
+      // font-size: 14px;
       }
     }
-    margin-top: 35%;
+    h3 {
+      margin-top: 0px;
+    }
 
   }
 
