navbar corrigée + landing responsive

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,27 @@
 
-<div class="bande" style="background-image:url(https://images.unsplash.com/photo-1496116218417-1a781b1c416c?ixlib=rb-0.3.5&s=aa5f954f8c3de6f8427e6f8ad35c0085&auto=format&fit=crop&w=2550&q=80)">
-  <div class="banner-content">
-    <h1>Oishi.io</h1>
-    <p class="progressif">La gastronomie japonaise simplifiée</p>
+
+<!-- div class="big">
+  <div class="page">
+    <div class="bottom-right message">
+      <h1>OISHI</h1>
+    </div>
+  </div>
+
+</div> -->
+
+
+<div class="structure">
+  <div class="bande">
+    <div class="banner-content">
+      <h2 class="bottom-right">OISHI</h2>
+    </div>
   </div>
 </div>
+<div class="incipit">
+  <div><h2>/ La Gastronomie Japonaise Simplifiée /</h2></div>
+</div>
 
-<script type="text/javascript">
+<!-- <script type="text/javascript">
 var progressif = jQuery('.progressif');
 var text = progressif.text() ; // on met le texte dans une variable
 var text_length = text.length; // on mesure la longueur du texte
@@ -32,7 +47,7 @@ var timer = setInterval(function(){
 
 }, 100);
 
-</script>
+</script> -->
 
 
 
