--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,110 +1,184 @@
-// Specific CSS for your home-page
-*, *:before, *:after {
-  // -moz-box-sizing: border-box;
-  // -webkit-box-sizing: border-box;
-  box-sizing: border-box;
- }
 
-.grid {
-  background: pink;
-}
-
-.grid_item {
-  background: #ebebeb;
-  display: block;
-  float: left;
-  position: relative;
-  // -moz-transform: translate3d(0,0,0);
-  // -webkit-transform: translate3d(0,0,0);
-  transform: translate3d(0,0,0);
-  // -moz-transition: all .2s cubic-bezier(.4,0,.2,1);
-  // -webkit-transition: all .2s cubic-bezier(.4,0,.2,1);
-  transition: all .2s cubic-bezier(.4,0,.2,1);
-  margin-top: 0.3%;
-
-
-}
-
-.grid_link {
-  display: block;
-  color: white;
-  position: relative;
-  overflow: hidden;
-  border: 4px solid #FFF;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-}
 .bande{
-  .h1,p{
-  margin-bottom: 150%;
-  }
+      background-image: url(https://images.unsplash.com/photo-1496116218417-1a781b1c416c?ixlib=rb-0.3.5&s=aa5f954f8c3de6f8427e6f8ad35c0085&auto=format&fit=crop&w=2550&q=80) ;
+      background-position: center center;
+      background-repeat:  no-repeat;
+      background-attachment: fixed;
+      background-size:  cover;
+      background-color: white;
+    }
+
+// .structure{
+//   height:80%;
+// }
+
+.banner-content{
+  position: relative;
+  h2 {
+  background-color: black;
+  color: white;
+  font-size: 50px;
+}
 }
 
-
-.tile {
-  font-size: 14px;
-  font-family: "Segoe UI";
-  line-height: 18px;
-  padding: 12px;
+.bottom-right {
   position: absolute;
-  bottom: 0%;
-  left: 0%;
-  // -webkit-transform: translate(0%,0%);
-  //     -ms-transform: translate(0%,0%);
-  //         transform: translate(0%,0%);
+  bottom: 8px;
+  left: 16px;
+
+}
+
+
+.incipit{
+  background-color: pink;
+  color: white;
+  // height: 100%;
+  // text-align: center;
+  padding: 20%;
+}
+
+.banner-content {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
   width: 100%;
-  color: black;
-  background-color: white;
+  height:45%;
+  bottom: 0;
+  display: block;
+  position: absolute;
+  padding: 0.5em;
 }
 
-.a { background: #bada55; }
-.b { background: pink; }
-.c { background: aqua; }
-.d { background: orange; }
-.e { background: yellow; }
-.f { background: brown; }
-.g { background: purple; }
 
-@media all and (max-width: 320px) {
-  .span__1,
-  .span__2,
-  .span__4{
-    width: 100%;
-    .grid_link {
-    padding-bottom: 100%;
-    }
-  }
-}
 
-@media all and (min-width: 321px) and (max-width: 480px) {
-  .span__1,
-  .span__2,
-  .span__4{
-    width: 49.545252%;
-    .grid_link {
-    padding-bottom: 100%;
-    }
-  }
-}
 
-@media all and (min-width: 481px) {
-  .span__1 {
-    width: 25%;
-    .grid_link {
-      padding-bottom: 100%;
-    }
-  }
 
-  .span__2 {
-    width: 50%;
-    .grid_link {
-      padding-bottom: 50%;
-    }
-  }
 
-  .span__4 {
-    width: 100%;
-    .grid_link {
-      padding-bottom: 25%;
-    }
-  }
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+// Specific CSS for your home-page
+// *, *:before, *:after {
+//   // -moz-box-sizing: border-box;
+//   // -webkit-box-sizing: border-box;
+//   box-sizing: border-box;
+//  }
+
+// .grid {
+//   background: pink;
+// }
+
+// .grid_item {
+//   background: #ebebeb;
+//   display: block;
+//   float: left;
+//   position: relative;
+//   // -moz-transform: translate3d(0,0,0);
+//   // -webkit-transform: translate3d(0,0,0);
+//   transform: translate3d(0,0,0);
+//   // -moz-transition: all .2s cubic-bezier(.4,0,.2,1);
+//   // -webkit-transition: all .2s cubic-bezier(.4,0,.2,1);
+//   transition: all .2s cubic-bezier(.4,0,.2,1);
+//   margin-top: 0.3%;
+
+
+// }
+
+// .grid_link {
+//   display: block;
+//   color: white;
+//   position: relative;
+//   overflow: hidden;
+//   border: 4px solid #FFF;
+//   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+// }
+// .bande{
+//   .h1,p{
+//   margin-bottom: 150%;
+//   }
+// }
+
+// .progressif{
+//   color: black;
+// }
+// //
+//
+// .tile {
+  // font-size: 14px;
+  // font-family: "Segoe UI";
+  // line-height: 18px;
+  // padding: 12px;
+  // position: absolute;
+  // bottom: 0%;
+  // left: 0%;
+  //-webkit-transform: translate(0%,0%);
+      //-ms-transform: translate(0%,0%);
+          //transform: translate(0%,0%);
+  // width: 100%;
+  // color: black;
+  // background-color: white;
+// }
+//
+// .a { background: #bada55; }
+// .b { background: pink; }
+// .c { background: aqua; }
+// .d { background: orange; }
+// .e { background: yellow; }
+// .f { background: brown; }
+// .g { background: purple; }
+//
+// @media all and (max-width: 320px) {
+  // .span__1,
+  // .span__2,
+  // .span__4{
+    // width: 100%;
+    // .grid_link {
+    // padding-bottom: 100%;
+    // }
+  // }
+// }
+//
+// @media all and (min-width: 321px) and (max-width: 480px) {
+  // .span__1,
+  // .span__2,
+  // .span__4{
+    // width: 49.545252%;
+    // .grid_link {
+    // padding-bottom: 100%;
+    // }
+  // }
+// }
+//
+// @media all and (min-width: 481px) {
+  // .span__1 {
+    // width: 25%;
+    // .grid_link {
+      // padding-bottom: 100%;
+    // }
+  // }
+//
+  // .span__2 {
+    // width: 50%;
+    // .grid_link {
+      // padding-bottom: 50%;
+    // }
+  // }
+//
+  // .span__4 {
+    // width: 100%;
+    // .grid_link {
+      // padding-bottom: 25%;
+    // }
+  // }
+// }
