--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,6 +20,9 @@
 <div class="incipit">
   <div><h2>/ La Gastronomie Japonaise Simplifiée /</h2></div>
 </div>
+<div class="cardholder">
+  <div><h2>/ Les cards/</h2></div>
+</div>
 
 <!-- <script type="text/javascript">
 var progressif = jQuery('.progressif');
