--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -23,7 +23,7 @@
       <!-- Avatar with dropdown menu -->
       <div class="navbar-item">
         <div class="dropdown">
-          <%= image_tag "https://static.comicvine.com/uploads/square_small/0/77/602625-japan.png", class: "avatar dropdown-toggle", id: "navbar-menu", "data-toggle" => "dropdown" %>
+          <%= image_tag "https://cdnimg.techneb.com/shop/17597-thickbox/plateau-de-table-flora-rond-en-bois-stratifie-noir.jpg", class: "avatar dropdown-toggle", id: "navbar-menu", "data-toggle" => "dropdown" %>
           <ul class="dropdown-menu dropdown-menu-right navbar-dropdown-menu">
             <li>
               <%= link_to destroy_user_session_path, method: :delete do %>
