--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,74 +1,76 @@
-<div class="navbar-component">
-  <!-- Logo -->
-  <%= link_to root_path, class: "navbar-brand" do %>
-    <%= image_tag "https://image.flaticon.com/icons/svg/68/68099.svg" %>
-  <% end %>
-
-  <!-- Right Navigation -->
-  <div class="navbar-right hidden-xs hidden-sm">
-
-
-
-    <% if user_signed_in? %>
-
-      <!-- Links when logged in -->
-      <% if current_user.admin? %>
-        <%= link_to "Admin Dashboard", rails_admin_path, class: "navbar-item navbar-link" %>
-        <%= link_to "Recettes", recipes_path, class: "navbar-item navbar-link" %>
-        <%= link_to "Ingrédients", ingredients_path, class: "navbar-item navbar-link" %>
-        <%= link_to "Tools", tools_path, class: "navbar-item navbar-link" %>
-
-      <% end %>
-
-      <!-- Avatar with dropdown menu -->
-      <div class="navbar-item">
-        <div class="dropdown">
-          <%= image_tag "https://static.comicvine.com/uploads/square_small/0/77/602625-japan.png", class: "avatar dropdown-toggle", id: "navbar-menu", "data-toggle" => "dropdown" %>
-          <ul class="dropdown-menu dropdown-menu-right navbar-dropdown-menu">
-            <li>
-              <%= link_to destroy_user_session_path, method: :delete do %>
-                <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Log out") %>
-              <% end %>
-            </li>
-          </ul>
-        </div>
-      </div>
-    <% else %>
-      <!-- Login link (when logged out) -->
-      <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-item navbar-link" %>
+<% if current_user.present? && current_user.admin? %>
+  <div class="navbar-component">
+    <!-- Logo -->
+    <%= link_to root_path, class: "navbar-brand" do %>
+      <%= image_tag "https://image.flaticon.com/icons/svg/68/68099.svg" %>
     <% end %>
-  </div>
 
-  <!-- Dropdown list appearing on mobile only -->
-  <div class="navbar-item hidden-md hidden-lg">
-    <div class="dropdown">
-      <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
-      <ul class="dropdown-menu dropdown-menu-right navbar-dropdown-menu">
-        <% if user_signed_in? %>
-          <!-- Links when logged in -->
-          <li>
-            <%= link_to "Home", root_path, class: "navbar-item navbar-link" %>
-          </li>
+    <!-- Right Navigation -->
+    <div class="navbar-right hidden-xs hidden-sm">
 
-          <% if current_user.admin? %>
-          <li>
-            <%= link_to "Admin Dashboard", rails_admin_path, class: "navbar-item navbar-link" %>
-          </li>
-          <li>
-            <%= link_to "Ajouter une recette", new_recipe_path, class: "navbar-item navbar-link" %>
-          </li>
-          <% end %>
-          <li>
-            <%= link_to "Log out", destroy_user_session_path, class: "navbar-item navbar-link", method: :delete %>
-          </li>
-        <% else %>
-          <!-- Login link (when logged out) -->
-          <li>
-            <%= link_to "Login", new_user_session_path, class: "navbar-item navbar-link" %>
-          </li>
+
+
+      <% if user_signed_in? %>
+
+        <!-- Links when logged in -->
+        <% if current_user.admin? %>
+          <%= link_to "Admin Dashboard", rails_admin_path, class: "navbar-item navbar-link" %>
+          <%= link_to "Recettes", recipes_path, class: "navbar-item navbar-link" %>
+          <%= link_to "Ingrédients", ingredients_path, class: "navbar-item navbar-link" %>
+          <%= link_to "Tools", tools_path, class: "navbar-item navbar-link" %>
+
         <% end %>
-      </ul>
+
+        <!-- Avatar with dropdown menu -->
+        <div class="navbar-item">
+          <div class="dropdown">
+            <%= image_tag "https://static.comicvine.com/uploads/square_small/0/77/602625-japan.png", class: "avatar dropdown-toggle", id: "navbar-menu", "data-toggle" => "dropdown" %>
+            <ul class="dropdown-menu dropdown-menu-right navbar-dropdown-menu">
+              <li>
+                <%= link_to destroy_user_session_path, method: :delete do %>
+                  <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Log out") %>
+                <% end %>
+              </li>
+            </ul>
+          </div>
+        </div>
+      <% else %>
+        <!-- Login link (when logged out) -->
+        <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-item navbar-link" %>
+      <% end %>
+    </div>
+
+    <!-- Dropdown list appearing on mobile only -->
+    <div class="navbar-item hidden-md hidden-lg">
+      <div class="dropdown">
+        <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
+        <ul class="dropdown-menu dropdown-menu-right navbar-dropdown-menu">
+          <% if user_signed_in? %>
+            <!-- Links when logged in -->
+            <li>
+              <%= link_to "Home", root_path, class: "navbar-item navbar-link" %>
+            </li>
+
+            <% if current_user.admin? %>
+            <li>
+              <%= link_to "Admin Dashboard", rails_admin_path, class: "navbar-item navbar-link" %>
+            </li>
+            <li>
+              <%= link_to "Ajouter une recette", new_recipe_path, class: "navbar-item navbar-link" %>
+            </li>
+            <% end %>
+            <li>
+              <%= link_to "Log out", destroy_user_session_path, class: "navbar-item navbar-link", method: :delete %>
+            </li>
+          <% else %>
+            <!-- Login link (when logged out) -->
+            <li>
+              <%= link_to "Login", new_user_session_path, class: "navbar-item navbar-link" %>
+            </li>
+          <% end %>
+        </ul>
+      </div>
     </div>
   </div>
-</div>
+<% end %>
 
