--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -3,7 +3,7 @@
   <div class="row entete">
     <div class="col-xs-12 recipe-title">
       <h2><%= @recipe.title %></h2>
-      <% if current_user.admin? %>
+      <% if current_user.present? && current_user.admin? %>
         <%= link_to add_details_path(@recipe) do %>
           <i class="fa fa-plus" aria-hidden="true"></i>
         <% end %>
