--- a/app/views/recipes/add_details.html.erb
+++ b/app/views/recipes/add_details.html.erb
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="//unpkg.com/iview/dist/styles/iview.css">
 
-<div class="container" id="recipe-add-details" v-cloak>
+<div id="recipe-add-details" v-cloak>
   <div class="recipe-info">
     <div v-if="!editBasics" class="item-center-flex-start" style="height: 50px;">
       <a v-on:click="editBasics = true">
@@ -41,7 +41,10 @@
           <h4 style="margin-top: 10px; margin-bottom: 10px;">Liste des mesures</h4>
           <draggable v-model="measures" :move="checkMove">
             <div v-for="(measure, index) in measures" :options="{draggable:'.item'}" class="draggable-measure" v-on:mouseenter="displayButtons('measure', index, 'block')" v-on:mouseleave="displayButtons('measure', index, 'none')">
-              <p><strong style="color: #338BF0;">{{ index + 1}}</strong><i class="fa fa-bars" aria-hidden="true" style="color: #338BF0; margin: 0px 10px;"></i>{{ measure.quantity }}{{ measure.text1 }}{{ measure.ingredient.name }}{{ measure.text2 }}</p>
+              <div class="item-center-space-between" style="width: 530px;">
+                <p><strong style="color: #338BF0;">{{ index + 1}}</strong><i class="fa fa-bars" aria-hidden="true" style="color: #338BF0; margin: 0px 10px;"></i>{{ measure.ingredient.name }}{{ measure.text2 }}</p>
+                <p>{{ measure.quantity }}{{ measure.text1 }}</p>
+              </div>
               <div :id="'measure_' + index" style="display: none;">
                 <a v-on:click="editMeasure(measure)"><i class="fa fa-pencil-square-o" style="font-size: 20px;" aria-hidden="true"></i></a>
                 <a v-on:click="destroyMeasure(measure, index)" style="margin: 0px 5px;"><i class="fa fa-times" style="color: #cf1b1b; font-size: 20px;" aria-hidden="true"></i></a>
