replace recipes delete with fa-times

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -8,8 +8,9 @@
             <li style="list-style: none">
               <%= link_to recipe.title, recipe_path(recipe) %>
                 <% if recipe && policy(recipe).update? %>
-                <%= link_to 'delete', recipe_path(recipe), method: :delete %>
-                <%= link_to 'edit', edit_recipe_path(recipe)%>
+                <%= link_to recipe_path(recipe), method: :delete do %>
+                  <i class="fa fa-times" style="color: #cf1b1b; font-size: 20px;" aria-hidden="true"></i>
+                <% end %>
               <% end %>
             </li>
           <% end %>
