--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -6,6 +6,7 @@
       background-attachment: fixed;
       background-size:  cover;
       background-color: white;
+      height: calc(100vh - 70px);
     }
 
 .structure{
