--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,7 +18,7 @@
           <%= link_to "Recettes", recipes_path, class: "navbar-item navbar-link" %>
           <%= link_to "Ingrédients", ingredients_path, class: "navbar-item navbar-link" %>
           <%= link_to "Tools", tools_path, class: "navbar-item navbar-link" %>
-
+          <%= link_to "Tags", tags_path, class: "navbar-item navbar-link" %>
         <% end %>
 
         <!-- Avatar with dropdown menu -->
@@ -73,4 +73,3 @@
     </div>
   </div>
 <% end %>
-
