--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -1,7 +1,7 @@
 <div class="wrapper">
   <div class="container">
     <div align="center">
-      <h1>Nos tools</h1>
+      <h1>Liste des Ustensiles</h1>
         <ul>
           <% @tools.each do |tool| %>
             <li style="list-style: none">
