--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -1,8 +1,8 @@
-
 <div class="wrapper">
   <div class="container">
     <div align="center">
-      <h1>Nos ingrédients</h1>
+      <h1>Liste des Ingrédients</h1>
+        <%= link_to 'Ajouter un ingrédient', new_ingredient_path %>
         <ul>
           <% @ingredients.each do |ingredient| %>
             <li style="list-style: none">
