--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -2,6 +2,7 @@
   <div class="container">
     <div align="center">
       <h1>Liste des Ustensiles</h1>
+        <%= link_to 'Ajouter un ustensile', new_tool_path %>
         <ul>
           <% @tools.each do |tool| %>
             <li style="list-style: none">
