--- a/app/views/recipes/add_details.html.erb
+++ b/app/views/recipes/add_details.html.erb
@@ -42,7 +42,10 @@
           <draggable v-model="measures" :move="checkMove">
             <div v-for="(measure, index) in measures" :options="{draggable:'.item'}" class="draggable-measure" v-on:mouseenter="displayButtons('measure', index, 'block')" v-on:mouseleave="displayButtons('measure', index, 'none')">
               <div class="item-center-space-between border" style="width: 620px;">
-                <p><strong style="color: #338BF0;">{{ index + 1}}</strong><i class="fa fa-bars" aria-hidden="true" style="color: #338BF0; margin: 0px 10px;"></i>{{ measure.ingredient.name }}{{ measure.text2 }}</p>
+                <span style="display: flex;">
+                  <p><strong style="color: #338BF0;">{{ index + 1}}</strong><Icon type="md-reorder" color="#338BF0" style="margin: 0px 10px;"/></p>
+                  <p>{{ measure.ingredient.name }}{{ measure.text2 }}</p>
+                </span>
                 <p>{{ measure.quantity }}{{ measure.text1 }}</p>
               </div>
               <div :id="'measure_' + index" style="display: none;">
