adding save mecanic and dislay description in recipe/show

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -27,11 +27,9 @@
       <% end %>
     </div>
 
-
-
   <div class="col-sm-4 col-xs-12 recipe-topnotes">
     <div class="recipe-description">
-      <p>Use this bright green, earthy mix as a dip for crudités or a dressing for heartier salad greens like radicchio, spinach, arugula, thinly sliced fennel, or a combination. It’s also terrific as a dressing, drizzled on a simple roasted or grilled chicken, meats or fish. Use this bright green, earthy mix as a dip for crudités or a dressing for heartier salad greens like radicchio, spinach, arugula, thinly sliced fennel, or a combination.</p>
+      <p><%= @recipe.description %></p>
     </div>
   </div>
   </div>
