--- a/app/views/recipes/add_details.html.erb
+++ b/app/views/recipes/add_details.html.erb
@@ -34,7 +34,7 @@
     <div class="edit-recipe-description">
       <h5 style="margin-right: 10px;">Description: </h5>
       <p v-if="!editBasics">{{ recipe.description }}</p>
-      <textarea v-else class="form-control" type="text" placeholder="Description de l'étape" style="margin: 0px 5px; width: 570px;">{{ recipe.description }}</textarea>
+      <textarea v-else class="form-control" type="text" placeholder="Description de l'étape" v-model="recipe.description" style="margin: 0px 5px; width: 570px;">{{ recipe.description }}</textarea>
     </div>
   </div>
 
